--- a/app/src/main/res/layout/row_text.xml
+++ b/app/src/main/res/layout/row_text.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:includeFontPadding="false"
         android:id="@+id/row_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
